--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <h1></h1>
 <div class="userControl">
         <label for="16x16"></label>
-            <input type="radio" name="gridChoice" id="16x16" value="256" checked>
+            <input type="radio" name="gridChoice" id="16x16" value="16" checked>
             16 x 16
         </label><br>
 
         <label for="32x32"></label>
-            <input type="radio" name="gridChoice" id="32x32" value="1024">
+            <input type="radio" name="gridChoice" id="32x32" value="32">
             32 x 32
         </label><br>
 
         <label for="64x64"></label>
-            <input type="radio" name="gridChoice" id="64x64" value="4096">
+            <input type="radio" name="gridChoice" id="64x64" value="64">
             64 x 64
         </label><br>
 
@@ -30,10 +30,33 @@
         <p id="testOut"></p>
 </div>
 
-<div id="testWrapper">
-    <div id="gameWrapper">
-        
-    </div>
+<!--
+example of div structure from test
+
+<div class="wrapper">
+  <div class="rows">
+    <div class="boxes"></div>
+    <div class="boxes"></div>
+    <div class="boxes"></div>
+  </div>
+
+  <div class="rows">
+    <div class="boxes"></div>
+    <div class="boxes"></div>
+    <div class="boxes"></div>
+  </div>
+
+  <div class="rows">
+    <div class="boxes"></div>
+    <div class="boxes"></div>
+    <div class="boxes"></div>
+  </div>
+</div>
+-->
+
+
+<div class="gameWrapper">
+    
 </div>
 
 <script src="script.js"></script>
